# DIDA-THHPCA-SC23

./: README.md
code/sw/TradDA/: CMakeLists.txt
code/sw/TradDA/ATM/: CMakeLists.txt
code/sw/TradDA/ATM/core/: filter_types_mod.F90  gmcore_mod.F90  interp_mod.F90  nh_mod.F90  operators_mod.F90
code/sw/TradDA/ATM/core/adv/: ffsl_mod.F90  tvd_mod.F90
code/sw/TradDA/ATM/core/damp/: damp_mod.F90
code/sw/TradDA/ATM/core/pgf/: pgf_lin97_mod.F90  pgf_mod.F90  pgf_swm_mod.F90
code/sw/TradDA/ATM/core/vert_coord/: hybrid_coord_mod.F90
code/sw/TradDA/ATM/namelist/: namelist.mpas.360x180.l32_irr
code/sw/TradDA/ATM/prepare/: bkg_mod.F90  openmars_reader_mod.F90  ref_mod.F90
code/sw/TradDA/ATM/tests/: ksp15_test_mod.F90  rossby_haurwitz_wave_3d_test_mod.F90  steady_state_pgf_test_mod.F90  steady_state_test_mod.F90
code/sw/TradDA/ATM/tests/swm/: jet_zonal_flow_test_mod.F90  mountain_zonal_flow_test_mod.F90  vortex_erosion_test_mod.F90
code/sw/TradDA/ATM/utils/: debug_mod.F90  diag_state_mod.F90  halo_mod.F90  history_mod.F90  performance_analysis_mod.F90  time_mod.F90  tridiag_spk_mod.F90
code/sw/TradDA/COUPLER/: CMakeLists.txt
code/sw/TradDA/COUPLER/src/: module_coupler.F90  module_coupler_config.F90  module_coupler_log.F90  namelist_mod.f90
code/sw/TradDA/DA/EnDNN/: CMakeLists.txt
code/sw/TradDA/DA/EnDNN/src/: module_da_coupler.F90  module_da_parallel.F90  module_endnn_config.F90
code/sw/TradDA/DA/GRNG/: CMakeLists.txt
code/sw/TradDA/DA/LETKF/: CMakeLists.txt  Readme.md  run.sh
code/sw/TradDA/DA/LETKF/evaluate/: Readme.md  upload.py
code/sw/TradDA/DA/LETKF/src/: Makefile  letkf.F90  letkf_compute.F90  letkf_core.F90  letkf_final.F90  letkf_init.F90  letkf_yb.F90  obs_make.F90
code/sw/TradDA/DA/LETKF/unit/: toy_model.mod
code/sw/TradDA/DA/rpe/lib/: .gitignore
code/sw/TradDA/DA/utils/: CMakeLists.txt  README.md  da_namelist_mod.F90  da_output.F90  pro_info.F90  randn_mod.F90  splitchar.F90  vert_coord_mod.F90
code/sw/TradDA/DRIVE/: dida_drive.F90  gmcore_driver.F90
code/sw/TradDA/LIB/MCT/mct/: m_Router.F90
code/sw/TradDA/LIB/REDIS/hiredis-vip/: Makefile  logger.c  logger.h
code/sw/TradDA/LIB/REDIS/src/: redis_wrapper.c
code/sw/TradDA/LIB/container/: CMakeLists.txt
code/sw/TradDA/LIB/datetime/: CMakeLists.txt
code/sw/TradDA/LIB/fiona/: CMakeLists.txt_bak
code/sw/TradDA/LIB/fiona/src/: fiona_mod.F90
code/sw/TradDA/LIB/fiona_old/: CMakeLists.txt
code/sw/TradDA/LIB/flogger/: CMakeLists.txt
code/sw/TradDA/LIB/flogger/src/: log_mod.F90
code/sw/TradDA/LIB/fortran-datetime/: CMakeLists.txt
code/sw/TradDA/LIB/gptl-5.3/include/: gptl.mod  libunwind-sw_64.h
code/sw/TradDA/LIB/gptl-8.0/include/: gptl.mod
code/sw/TradDA/LIB/gptl-8.0/lib/: libgptl.la  libgptlf.la
code/sw/TradDA/LIB/gptl-x86/lib/: libgptl.so.0
code/sw/TradDA/LIB/gptl/include/: gptl.mod
code/sw/TradDA/LIB/gptl/lib/: libgptlf.la  libunwind-ptrace.la  libunwind.la
code/sw/TradDA/LIB/mpal/: CMakeLists.txt  README.md  compile.sh
code/sw/TradDA/LIB/mpal/include/: mpal.mod  mpal_basic.mod  rp_emulator.mod
code/sw/TradDA/LIB/mpal/src_bak/: mpal_basic.F90  mpal_intrinsic.F90  mpal_operation.F90  mpal_report.F90
code/sw/TradDA/LIB/mpal/test/: Makefile  test3.f90
code/sw/TradDA/OBS/OBSTAT/src/: submit.sh
code/sw/TradDA/SCRIPTS/: run.sh
code/sw/TradDA/envir/: batch_case_update.sh
code/sw/TradDA/envir/define_case/: case_group.ini
code/sw/TradDA/envir/define_case/baseline_namelist/: namelists.input1
code/sw/UNetDA/LIB/unit-test/: CMakeLists.txt
code/x86/TradDA/COUPLER/: CMakeLists.txt
code/x86/TradDA/COUPLER/src/: module_coupler.F90  module_coupler_log.F90
code/x86/UNetDA/: CMakeLists.txt
code/x86/UNetDA/ATM/: CMakeLists.txt
code/x86/UNetDA/ATM/core/: gmcore_mod.F90  interp_mod.F90  time_schemes_mod.F90
code/x86/UNetDA/ATM/core/adv/: adv_mod.F90
code/x86/UNetDA/ATM/core/damp/: div_damp_mod.F90
code/x86/UNetDA/ATM/gmcore_mct/: gmcore_coupler.F90
code/x86/UNetDA/ATM/tests/: baroclinic_wave_test_mod.F90  held_suarez_test_mod.F90
code/x86/UNetDA/ATM/tests/swm/: steady_geostrophic_flow_test_mod.F90
code/x86/UNetDA/ATM/utils/: const_mod.F90  history_mod.F90  initial_mod.F90  member_mod.F90  namelist_mod.F90  parallel_zonal_mod.F90  performance_analysis_mod.F90  time_mod.F90  tridiag_mkl_mod.F90  tridiag_mod.F90
code/x86/UNetDA/COUPLER/src/: module_coupler.F90  module_coupler_config.F90
code/x86/UNetDA/DA/EnDNN/src/: CMakeLists.txt  Readme.md  da_namelist_mod.F90  data_trans.F90  module_da.F90  module_da_config.F90  module_da_coupler.F90  module_da_parallel.F90  module_endnn_config.F90
code/x86/UNetDA/DA/GRNG/: CMakeLists.txt
code/x86/UNetDA/DA/LETKF/: Readme.md  mybuild.sh  run.sh
code/x86/UNetDA/DA/LETKF/evaluate/: Readme.md  cal_indicator.py  consumer-letkf1.0.py  testplot.py  upload.py
code/x86/UNetDA/DA/LETKF/src/: letkf.F90  letkf_compute.F90  letkf_core.F90  letkf_core_mpal.F90  letkf_final.F90  letkf_init.F90  letkf_obs.F90  letkf_yb.F90  obs_make.F90  read_obs_mod.F90  test.F90
code/x86/UNetDA/DA/LETKF/unit/: main.f90  model_config.inc  toy_model.f90
code/x86/UNetDA/DA/rpe/lib/: .gitignore
code/x86/UNetDA/DA/rpe/modules/: rp_emulator.mod
code/x86/UNetDA/DA/utils/: CMakeLists.txt  da_config.inc  da_output.F90  pro_info.F90  var_info.F90  vert_coord_mod.F90
code/x86/UNetDA/DRIVE/: dida_drive.F90
code/x86/UNetDA/LIB/MCT/mct/: m_Router.F90
code/x86/UNetDA/LIB/REDIS/: CMakeLists.txt
code/x86/UNetDA/LIB/REDIS/hiredis-vip/: hircluster.c
code/x86/UNetDA/LIB/REDIS/src/: redis_mod.F90  redis_wrapper.c
code/x86/UNetDA/LIB/fiona/src/: fiona_mod.F90
code/x86/UNetDA/LIB/flogger/: CMakeLists.txt
code/x86/UNetDA/LIB/flogger/src/: c_code.c
code/x86/UNetDA/LIB/flogging/: CMakeLists.txt
code/x86/UNetDA/SCRIPTS/: compile.sh  setconf2redis.sh
code/x86/UNetDA/envir/: readme  run-envir-corun.sh
code/x86/UNetDA/mp_config/: mct_config.inc
code/x86/UNetDA/test/: Model.py  PostProcessor.py  config.py  only_cnn_one.py  only_cnn_one_process.py  run.sh
code/x86/UNetDA/test/exp_test/: namelists.input  run.sh
(+299 files in other folders)
